rust/mlt-core/tests/snapshots/tag02_roundtrip__geometry_layouts__one_geometry_type_moves_into_the_header_byte@MultiPoint.snap
---
source: mlt-core/tests/tag02_roundtrip.rs
expression: "header_bits(&bytes).join(\"\\n\")"
---
no m-value section
every feature is a MultiPoint, no types stream
extent 2^(n+6) = 4096
shared bitfields are bitmaps
shared presence bitfields = 0
geometry layout = MultiPoints
