rust/mlt-core/tests/snapshots/tag02_roundtrip__geometry_layouts__tessellated_polygon_layout.snap
---
source: mlt-core/tests/tag02_roundtrip.rs
assertion_line: 699
expression: "dump_text(&l.encode(cfg_tessellated().with_wire_version(WireVersion::V02)).unwrap())"
---
00000000                                                                     | layer[0] (53 B)
00000000  34                                                4                |   size: 52 (varint) - tag + body
00000001  02                                                .                |   tag: 0x02 -> Tag02
00000002  0a 74 65 73 74 5f 6c 61 79 65 72                  .test_layer      |   name: "test_layer"
0000000d  80 20                                             .                |   extent: 4096
0000000f  01                                                .                |   feature_count: 1
00000010  0d                                                .                |   layout: 0x0D TessPolygonsWithOutlines
                                                                             |     └ bit 7 = 0 -> reserved = 0
                                                                             |     └ bits 6-4 = 000 -> shared presence bitfields = 0
                                                                             |     └ bits 3-0 = 1101 -> geometry layout = TessPolygonsWithOutlines
00000011                                                                     |   geometry (35 B)
00000011                                                                     |     types (3 B)
00000011                                                                     |       header (2 B)
00000011  08                                                .                |         encoding: 0x08 logical=None physical=VarInt
                                                                             |           └ bit 7 = 0 -> has_explicit_count = false -> 1 values from context
                                                                             |           └ bits 6-4 = 000 -> logical = None, numbered for a v2 integer stream
                                                                             |           └ bits 3-2 = 10 -> physical = VarInt
                                                                             |           └ bits 1-0 = 00 -> extension = 0
00000012  01                                                .                |         byte_length: 1
00000013  02                                                .                |       data [Length(VarBinary) Int(None)/VarInt, 1 values, 1 B]
                                                                             |         decoded: [2]
00000014                                                                     |     geo_lengths (3 B)
00000014                                                                     |       header (3 B)
00000014  84                                                .                |         encoding: 0x84 logical=None physical=NoneWithLen
                                                                             |           └ bit 7 = 1 -> has_explicit_count = true -> a num_values varint follows
                                                                             |           └ bits 6-4 = 000 -> logical = None, numbered for a v2 integer stream
                                                                             |           └ bits 3-2 = 01 -> physical = NoneWithLen
                                                                             |           └ bits 1-0 = 00 -> extension = 0
00000015  00                                                .                |         num_values: 0
00000016  00                                                .                |         byte_length: 0
00000017                                                                     |       data [Length(Geometries) Int(None)/None, 0 values, 0 B]
                                                                             |         decoded: []
00000017                                                                     |     part_lengths (3 B)
00000017                                                                     |       header (2 B)
00000017  08                                                .                |         encoding: 0x08 logical=None physical=VarInt
                                                                             |           └ bit 7 = 0 -> has_explicit_count = false -> 1 values from context
                                                                             |           └ bits 6-4 = 000 -> logical = None, numbered for a v2 integer stream
                                                                             |           └ bits 3-2 = 10 -> physical = VarInt
                                                                             |           └ bits 1-0 = 00 -> extension = 0
00000018  01                                                .                |         byte_length: 1
00000019  01                                                .                |       data [Length(Parts) Int(None)/VarInt, 1 values, 1 B]
                                                                             |         decoded: [1]
0000001a                                                                     |     ring_lengths (3 B)
0000001a                                                                     |       header (2 B)
0000001a  08                                                .                |         encoding: 0x08 logical=None physical=VarInt
                                                                             |           └ bit 7 = 0 -> has_explicit_count = false -> 1 values from context
                                                                             |           └ bits 6-4 = 000 -> logical = None, numbered for a v2 integer stream
                                                                             |           └ bits 3-2 = 10 -> physical = VarInt
                                                                             |           └ bits 1-0 = 00 -> extension = 0
0000001b  01                                                .                |         byte_length: 1
0000001c  04                                                .                |       data [Length(Rings) Int(None)/VarInt, 1 values, 1 B]
                                                                             |         decoded: [4]
0000001d                                                                     |     tri_lengths (3 B)
0000001d                                                                     |       header (2 B)
0000001d  08                                                .                |         encoding: 0x08 logical=None physical=VarInt
                                                                             |           └ bit 7 = 0 -> has_explicit_count = false -> 1 values from context
                                                                             |           └ bits 6-4 = 000 -> logical = None, numbered for a v2 integer stream
                                                                             |           └ bits 3-2 = 10 -> physical = VarInt
                                                                             |           └ bits 1-0 = 00 -> extension = 0
0000001e  01                                                .                |         byte_length: 1
0000001f  02                                                .                |       data [Length(Triangles) Int(None)/VarInt, 1 values, 1 B]
                                                                             |         decoded: [2]
00000020                                                                     |     tri_indexes (9 B)
00000020                                                                     |       header (3 B)
00000020  88                                                .                |         encoding: 0x88 logical=None physical=VarInt
                                                                             |           └ bit 7 = 1 -> has_explicit_count = true -> a num_values varint follows
                                                                             |           └ bits 6-4 = 000 -> logical = None, numbered for a v2 integer stream
                                                                             |           └ bits 3-2 = 10 -> physical = VarInt
                                                                             |           └ bits 1-0 = 00 -> extension = 0
00000021  06                                                .                |         num_values: 6
00000022  06                                                .                |         byte_length: 6
00000023  02 03 00 00 01 02                                 ......           |       data [Offset(Index) Int(None)/VarInt, 6 values, 6 B]
                                                                             |         decoded: [2, 3, 0, 0, 1, 2]
00000029                                                                     |     vertices (11 B)
00000029                                                                     |       header (3 B)
00000029  a8                                                .                |         encoding: 0xA8 logical=CwDelta physical=VarInt
                                                                             |           └ bit 7 = 1 -> has_explicit_count = true -> a num_values varint follows
                                                                             |           └ bits 6-4 = 010 -> logical = CwDelta, numbered for a v2 vertex stream
                                                                             |           └ bits 3-2 = 10 -> physical = VarInt
                                                                             |           └ bits 1-0 = 00 -> extension = 0
0000002a  08                                                .                |         num_values: 8
0000002b  08                                                .                |         byte_length: 8
0000002c  00 00 14 00 00 14 13 00                           ........         |       data [Data(Vertex) Vertex(ComponentwiseDelta)/VarInt, 8 values, 8 B]
                                                                             |         decoded: [0, 0, 10, 0, 10, 10, 0, 10]
00000034  00                                                .                |   column_count: 0
